# forsyde-io

./: .earthlyignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Earthfile  Makefile  README.MD  build.gradle  build.properties  example.xml  generate_models.py  graphviz.pro  meta.json  mkdocs.yml  pyproject.toml  queries.pro  rules.pro  settings.gradle  std_trait_hierarchy.traitdsl  trial.fio
.github/deprecated_workflows/: publish-builds-java.yml
.github/workflows/: gradle-publish copy.yml  gradle-publish.yml  gradle-test-publish.yml  publish-builds-java.yml  publish-builds-python.yml  publish-builds.yml  publish-conversyde.yml  python-publish.yml  python-test-publish.yml  test-builds-java.yml  test-builds-python.yml  test-builds.yml
amalthea-java/: build.gradle
buildSrc/: build.gradle
buildSrcOld/: build.gradle
common-java/: traithierarchy.traitdsl
common-julia/test/: runtests.jl
common-python/: .gitignore  README.md
common-rust/: Cargo.toml
docs/: .gitignore  Gemfile  _config.yml  about.md  concept.markdown  index.markdown  index.md  libraries.markdown  motivation.markdown  usage.markdown
docs/_posts/: 2021-02-08-welcome-to-jekyll.markdown
docs/concepts/: definitions.markdown  example.markdown  implementation.markdown  index.markdown  system-graph.markdown  trait-hierarchy.markdown
docs/references/: forsyde-xmi-format.markdown  index.markdown
docs/usage/: catalog.markdown  conversyde.markdown  index.markdown  libforsyde-quick-start.markdown  manipulation-analysis.markdown  read-write.markdown
eclipse/: build.gradle  settings.gradle
eclipse/system.graph.model/: .gitignore  bnd.bnd  launch.bndrun  plugin.properties  plugin.xml
ecore/: forsyde.ecore  forsyde.genmodel  types.aird  types.ecore  types.genmodel
emf/: build.gradle
emf/epsilon/: forsyde2py.egx
emf/examples/: sobel-sdf-mpsoc.xmi  sobel.xmi
emf/model/: forsyde.aird  forsyde.ecore
epsilon/: build.gradle  forsyde2hs.egx  forsyde2py.egx  settings.gradle
epsilon/templates/: forsyde2hs_class.egl  forsyde2hs_package.egl  forsyde2py.egl  forsyde2py_class.egl  forsyde2py_class_copy.egl  forsyde2py_class_dump.egl  forsyde2py_class_iterate.egl  forsyde2py_class_parse.egl  forsyde2py_enum.egl  forsyde2py_package.egl
examples/: FlightInformationFunction.forxml  FlightInformationFunctionReactor.forxml  PerformJavaTests.java  WATERS2019Reactor.forxml  silly.xmi  sobel-sdf-mpsoc.xmi  sobel.pro  sobel.sdf.example.xml  sobel.xmi  sobel2mpsoc-reduced.forxml  sobel2mpsoc-reducedCores.forxml  sobel2mpsoc.forxml  synthetic2homo_mpsoc.xml  system.example.xml  test-for-read.xmi  waters2019_enhanced_manually.forsyde.xml  waters2019_enhanced_manually_easier.forsyde.xml
examples/multi_formats/: application_lingua_franca.lf  platform_simple_model.amxmi  wcets_listing.forsyde.xml
examples/platform/: paper_emsoft2023_2bus_example.fiodl  toy_tiled_2core.fiodl
examples/sdf/: complete-merged-model.fiodl  paper_emsoft2023_running_example.fiodl  rosvall_sander_examples.fiodl  sobel-application.fiodl  sobel2mpsoc.forsyde.xmi  sobel2mpsoc.forsyde.xml  sobel2mpsoc_mapped.forsyde.xmi  sobel2mpsoc_mapped.forsyde.xml  toy_sdf.fiodl  toy_sdf_small_cycle.fiodl  toy_sdf_tiny.fiodl
examples/sy/: imageProcessingSY.fiodl
examples/systemc/: toy_sy.cpp
flat-ir/: description.cf
generator/: __main__.py  common.py  haskell.py  java.py  python.py
graphviz-java/: build.gradle
groovy-frontsyde/: build.gradle
haskell/: ChangeLog.md  Generate.hs  Makefile  forsyde-io-haskell.cabal  package.yaml  stack.yaml
haskell-core/: .gitignore  ChangeLog.md  Generate.hs  LICENSE  Makefile  README.md  forsyde-io-haskell.cabal  meta.json  package.yaml  stack.yaml
haskell-io/: README.md  package.yaml  stack.yaml
java/: .gitignore  Makefile  build.gradle  generator.gradle  gradle.properties  lflang-build.gradle  meta.json  settings.gradle
java-amalthea/: build.gradle
java-bridge-forsyde-shallow/: build.gradle
java-bridge-forsyde-systemc/: build.gradle
java-bridge-sdf3/: build.gradle
java-conversyde/: build.gradle
java-core/: .gitignore  build.gradle  meta.json  traithierarchy.traitdsl
java-freertos-synth/: build.gradle
java-generator/: build.gradle
java-graphviz/: build.gradle
java-io/: Makefile  build.gradle
java-libforsyde/: build.gradle
java-libforsyde-hierarchy/: build.gradle
java-linguafranca/: build.gradle
java-ods-reporting/: build.gradle
java-posix-synth/: build.gradle
java-sdf3/: build.gradle
julia/: LICENSE  Project.toml  generate.jl  meta.json
julia-core/: .gitignore  LICENSE  Project.toml  README.md  generate.jl  meta.json
kotlin-freertos-synth/: build.gradle
linguafranca-java/: build.gradle
model/: .gitignore  ForSyDeIOTraitModel.xmi  Types.xcore  build.gradle  forsyde.ecore  forsyde.genmodel  graph-schema.json  graph.json  graph.yaml  meta.json  model.forsydemeta  settings.gradle  trait-hierarchy-ebnf.lbnf  trait-meta.ecore
origin/: description.schema.json
python/: MANIFEST.in  Makefile  README.md  generate.py  meta.json  package_template.py  pyproject.toml  setup.py  test.py
python-core/: .gitignore  MANIFEST.in  Makefile  README.md  generate.py  meta.json  package_template.py  pyproject.toml  requirements.txt
python-generator/: generate.py  pyproject.toml  specs.py
python-io/: Makefile  README.md  setup.py
python/forsyde/io/python/: __init__.py  api.py  core.py  drivers.py  ports.py  types.py
python/tests/: test_drivers.py
rust-core/: .gitignore  Cargo.toml
rust-core-macro/: Cargo.toml
rust-core-macro/src/: lib.rs
rust-core/src/: avro.rs  fbs.rs  fiodl.rs  lib.rs
rust-core/src/models/: mod.rs
rust-generator/: Cargo.toml
rust-generator/src/: lib.rs
rust-libforsyde/: Cargo.toml  build.rs  forsyde.io.lib.hierarchy.ForSyDeHierarchy.json
rust-libforsyde/src/: lib.rs
sdf3-java/: build.gradle
sql/: create_sdf_views.sql  create_tables.sql  create_types_views.sql  create_views.sql  insert_edge.sql  insert_port.sql  insert_property.sql  insert_vertex.sql
templates/: package.py
xsd/: ForSyDe.xsd  schema.xsd  test.xml
(+1544 files in other folders)
