[workspace]
members = [
  "rust-core",
  "rust-core-macro",
  "rust-generator",
  "rust-libforsyde"
]
description = "ForSyDe IO Rust support library"
resolver = "2"

[workspace.dependencies]
nom = "7.1.3"
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing" ] }

[workspace.package]
version = "0.8.4"
authors = ["Rodolfo Jordao"]
edition = "2021"
repository = "https://github.com/forsyde/forsyde-io"
homepage = "https://forsyde.github.io/forsyde-io/"
license = "MIT"
readme = "README.MD"