[tool.poetry]
name = "generator"
version = "0.2.5"
description = "Meta generator for ForSyDe IO supporting libraries"
authors = ["Rodolfo <jordao@kth.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.11.3"
pyaml = "^20.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
generate = "generator.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
