[tool.poetry]
name = "forsyde-io-python-generator"
version = "0.5.5"
description = "Python supporting libraries generator for ForSyDe IO"
authors = ["Rodolfo <jordao@kth.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://forsyde.github.io/forsyde-io/"
repository = "https://github.com/forsyde/forsyde-io"
documentation = "https://forsyde.github.io/forsyde-io/"
include = ["forsyde/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
antlr4-python3-runtime = "^4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
