[tool.poetry]
name = "forsyde-io-python"
version = "0.2.7"
description = "Python supporting libraries for ForSyDe IO"
authors = ["Rodolfo <jordao@kth.se>"]
license = "MIT"
packages = [
    {include = "forsyde"}
]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.5"
pydot = "^1.4.1"
lxml = "^4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
