[tool.poetry]
name = "forsyde-io-python"
version = "0.3.3"
description = "Python supporting libraries for ForSyDe IO"
authors = ["Rodolfo <jordao@kth.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://forsyde.github.io/forsyde-io/"
repository = "https://github.com/forsyde/forsyde-io"
documentation = "https://forsyde.github.io/forsyde-io/"
packages = [
    {include = "forsyde"}
]
include = ["forsyde/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.5"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
