[package]
name = "forsyde-io-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# avro-rs.workspace = true
# flatbuffers.workspace = true
nom.workspace = true
petgraph.workspace = true
serde.workspace = true
