[package]
name = "forsyde-io-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
# avro-rs.workspace = true
# flatbuffers.workspace = true
nom.workspace = true
petgraph.workspace = true
serde.workspace = true
