[package]
name = "forsyde-io-generator"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
forsyde-io-core = { path = "../rust-core" }
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
petgraph.workspace = true
