[package]
name = "forsyde-io-generator"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
description = "Code generation component for traits and others of the Rust ForSyDe IO supporting library"

[dependencies]
forsyde-io-core = { path = "../rust-core", version = "0.8" }
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
petgraph.workspace = true
