[package]
name = "forsyde-io-libforsyde"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
forsyde-io-core = { path = "../rust-core" }
petgraph.workspace = true

[build-dependencies]
forsyde-io-generator = { path = "../rust-generator"}
serde.workspace = true
serde_json.workspace = true